  - mikmod: sample rate is configurable
  - mpg123: new decoder plugin based on libmpg123
  - sidplay: support sub-tunes
  - sidplay: implemented songlength database
  - sidplay: support seeking
  - wavpack: activate 32 bit support
  - wavpack: allow more than 2 channels
  - mp4ff: rename plugin "mp4" to "mp4ff"
  - mp4ff: support tags "albumartist", "band"
* encoders:
  - twolame: new encoder plugin based on libtwolame
  - flac: new encoder plugin based on libFLAC
  - wave: new encoder plugin for PCM WAV format
* output:
  - recorder: new output plugin for recording radio streams
  - alsa: don't recover on CANCEL
  - alsa: fill period buffer with silence before draining
  - openal: new output plugin
  - pulse: announce "media.role=music"
  - pulse: renamed context to "Music Player Daemon"
  - pulse: connect to server on MPD startup, implement pause
  - jack: require libjack 0.100
  - jack: don't disconnect during pause
  - jack: connect to server on MPD startup
  - jack: added options "client_name", "server_name"
  - jack: clear ring buffers before activating
  - jack: renamed option "ports" to "destination_ports"
  - jack: support more than two audio channels
  - httpd: bind port when output is enabled
  - httpd: added name/genre/website configuration
  - oss: 24 bit support via OSS4
  - win32: new output plugin for Windows Wave
  - wildcards allowed in audio_format configuration
  - consistently lock audio output objects
* player:
  - drain audio outputs at the end of the playlist
* mixers:
  - removed support for legacy mixer configuration
  - reimplemented software volume as mixer+filter plugin
  - per-device software/hardware mixer setting
* commands:
  - added new "status" line with more precise "elapsed time"
* update:
  - automatically update the database with Linux inotify
  - support .mpdignore files in the music directory
  - sort songs by album name first, then disc/track number
  - rescan after metadata_to_use change