@@ -39,6 +39,7 @@ ver 0.16 (20??/??/??)
   - wavpack: allow more than 2 channels
   - mp4ff: rename plugin "mp4" to "mp4ff"
   - mp4ff: support tags "albumartist", "band"
+  - mikmod: fix memory leak
 * encoders:
   - twolame: new encoder plugin based on libtwolame
   - flac: new encoder plugin based on libFLAC
